--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 html { background-color: #732690; padding: 20px; }
 body { background-color: #FFFFFF; color: #836762; font-family: sans-serif; margin: 0 auto; padding: 20px; width: 640px; }
 
-h1 { float: left; line-height: 1.5; margin: 0 0 20px 0; width: 100%; }
+h1 { line-height: 1.5; margin: 0 0 20px 0; width: 100%; }
 h2 { border-bottom: 1px solid #836762; float: left; line-height: 1.5; margin: 0 0 20px 0; width: 100%; }
 h3 { border-bottom: 1px solid #836762; float: left; line-height: 1.5; margin: 10px 0 20px 0; width: 100%; }
 
-form section { float: left; margin: 0 0 20px 0; }
+form section { margin: 0 0 20px 0; }
 form section span { float: left; padding: 10px; width: 50%; }
 
 label { display: block; font-weight: bold; line-height: 24px; margin: 0 0 12px 0; width: 100%; }
